# fantasy-name-generator

./: .gitignore  Cargo.toml  main.py  readme.md
src/: main.rs
